src/styles.css
:root {
  /* Colors */
  --color-dark-blue-dark-mode-elements: hsl(209, 23%, 22%);
  --color-very-dark-blue-dark-mode-background: hsl(207, 26%, 17%);
  --color-very-dark-blue-light-mode-text: hsl(200, 15%, 8%);
  --color-dark-gray-light-mode-input: hsl(0, 0%, 52%);
  --color-very-light-gray-light-mode-background: hsl(0, 0%, 98%);
  --color-white-dark-mode-text-light-mode-elements: hsl(0, 0%, 100%);

  /* Typography */
  --font-size-homepage-items: 14px;
  --font-size-detail-page: 16px;
  --font-nunito-sans: 'Nunito Sans', sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--font-nunito-sans);
}

body, main {
  width: 100vw;
  height: auto;
}

main {
  border: 5px solid green;
}

header {
  width: 100%;
  height: 7rem;
  display: flex;
  align-items: center;
}

@media (min-width: 768px)
{
  header {
    height: 3rem;
  } 
}

nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1rem;
}

nav h2 {
  font-size: 1.3rem;
}

nav .switchTheme {
  display: flex;
  display: flex;
  align-items: center;
  cursor: pointer;
}

nav .switchTheme p {
  margin: 0 0.5rem;
}

.search {
  width: 90vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2rem auto;
}

.search .inputBox {
  width: 100%;
}

.search .inputBox .input {
  width: 100%;
  height: 3rem;
  padding: 0 0.5rem;
  border-radius: 5;
  display: flex;
  align-items: center;
  border-radius: 5px;
}
.search .inputBox .input .icon {
  margin: 0;
}


.inputBox .input input {
  border: none;
  height: 100%;
  margin: 0 0.5rem;
  font-size: 1.2rem;
  background-color: inherit;
  color: inherit;
}

.inputBox .input input:focus {
  outline: none;
  border: none;
}

.filterBox {
  width: 50%;
  align-self: flex-start;
}

.filterBox select {
  width: 100%;
  max-width: 300px;
  font-size: 1rem;
  padding: 0 0.5rem;
  height: 3rem;
  border: none;
  margin: 1rem 0;
  border-radius: 5px;
}

@media (min-width: 768px)
{
  .search {
    width: 90vw;
    flex-direction: row;
    justify-content: space-between;
  }

  .search .inputBox {
    max-width: 350px;
  }

  .filterBox {
    display: flex;
    justify-content: flex-end;
  }
}

/* Countries */
.countries-grid {
  max-width: 90vw;
  margin: 1rem auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 2rem;
}

.country {
  width: 100%;
  border-radius: 5px;
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.country .flag {
  width: 100%;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.country .flag img {
  width: 100%;
  height: 100%;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.country .country-content {
  width: 80%;
  margin: 1rem auto;
}

.country-content h2 {
  margin: 1rem 0;
}

